src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

.contact-form {
  display: flex;
  flex-direction: column;
  width: 500px;
  margin: 0 auto;
  padding: 2rem;
  border: 1px solid #ddd;
  border-radius: 4px;
}

.form-group {
  margin-bottom: 1rem;
}

label {
  display: block;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.form-control {
  width: 100%;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

textarea {
  height: 100px;
}

.submit-button {
  background-color: #4caf50; /* Green */
  border: none;
  color: white;
  padding: 1rem 2rem;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin-top: 1rem;
  cursor: pointer;
  border-radius: 4px;
}

.submit-button:hover {
  background-color: #45a049; /* Green hover */
}

.success,
.error {
  margin-top: 1rem;
  padding: 0.5rem 1rem;
  border-radius: 4px;
}

.success {
  background-color: #dff0d8;
  color: #3c763d;
}

.error {
  background-color: #f2dede;
  color: #a94442;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: rgb(41, 41, 41);
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.logo-flex {
  display: flex;
  align-items: center;
  justify-content: center;
}

.infinite-zoom {
  animation: zoomInOut 7s ease-in-out infinite alternate;
}

@keyframes zoomInOut {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.2); /* Adjust for desired zoom level */
  }
  100% {
    transform: scale(1);
  }
}

.nav {
  position: absolute;
  top: 5vh;
  margin-bottom: 5rem;
  padding: 1rem;
  background-color: rgba(0, 0, 0, 0.116);
  border-radius: 50px;
}

.nav li {
  font-weight: 500;
  color: yellowgreen;
}

.mr {
  margin-right: 1.5rem;
}

.nav li:hover {
  color: white;
  transition: 0.5s;
}

.typewriter {
  font-size: 24px;
  font-weight: 400;
  text-align: center;
  padding: 20px;
  color: yellowgreen;
}

.getstarted-button {
  background-color: yellowgreen;
  border: none;
  color: rgb(0, 0, 0);
  padding: 10px 25px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
  border-radius: 50px;
  transition: 0.3s ease all;
  margin-top: 2rem;
  font-weight: 600;
}

.getstarted-button1 {
  background-color: yellow;
  border: none;
  color: rgb(0, 0, 0);
  padding: 10px 25px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
  border-radius: 50px;
  transition: 0.3s ease all;
  margin-top: 2rem;
  font-weight: 600;
}

.getstarted-button:hover {
  background-color: rgb(73, 105, 7);
}

.getstarted-button1:hover {
  background-color: rgb(141, 141, 1);
}

li .active {
  color: white;
}

.about {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.sabout {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.left {
  padding: 5rem;
  background-color: rgba(0, 0, 0, 0.24);
  border-radius: 10px;
  box-shadow: rgba(30, 255, 0, 0.15) 1.95px 1.95px 2.6px;
  text-align: center;
  color: white;
}

.sleft {
  padding: 5rem;
  background-color: rgba(0, 0, 0, 0.24);
  border-radius: 10px;
  box-shadow: rgba(30, 255, 0, 0.15) 1.95px 1.95px 2.6px;
  text-align: center;
  color: white;
}

.left h1 {
  font-size: 24px;
  margin-top: 1rem;
}

.left p {
  color: yellowgreen;
}

.limg {
  border-radius: 50px;
  display: grid;
  margin: auto;
}

.right {
  margin-left: 5rem;
  color: white;
  font-size: 15px;
}

.right h1 {
  font-size: 26px;
  font-weight: bold;
}

.right h1 span {
  color: yellowgreen;
}

.abd {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 2rem;
}

.abd1,
.abd2 {
  padding: 3rem;
  background-color: rgba(0, 0, 0, 0.247);
  margin: 1rem;
  border-radius: 10px;
  box-shadow: rgba(30, 255, 0, 0.15) 1.95px 1.95px 2.6px;
  text-align: center;
}

.abd1 p,
.abd2 p {
  color: yellowgreen;
}

.project-card {
  box-shadow: rgba(30, 255, 0, 0.15) 1.95px 1.95px 2.6px;
  margin: 2rem;
  color: white;
  text-align: center;
}

.proimg {
  border-radius: 10px;
  object-fit: cover;
  height: 200px;
  width: 100%;
}

.socimg {
  border-radius: 10px;
  object-fit: cover;
  height: 100px;
  width: 100%;
}

.form {
  box-shadow: rgba(30, 255, 0, 0.15) 1.95px 1.95px 2.6px;
}

@media only screen and (max-width: 600px) {
  .typewriter {
    font-size: 12px;
    padding: 5px;
    width: 90vw;
  }

  .nav li {
    font-size: 12px;
  }

  .nav {
    margin-bottom: 0;
  }

  .about {
    grid-template-columns: 1fr;
    width: 90vw;
  }

  .left {
    padding: 2rem;
  }

  .left h1 {
    font-size: 18px;
  }

  .limg {
    width: 100px;
  }

  .getstarted-button,
  .getstarted-button1 {
    margin-right: 0;
    padding: 5px 15px;
    font-size: 12px;
  }

  .btns {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .right {
    display: grid;
    margin: auto;
    margin-top: 2rem;
    text-align: center;
  }

  .right h1 {
    font-size: 18px;
  }

  .abd {
    grid-template-columns: 1fr;
  }

  .abd1,
  .abd2 {
    padding: 1rem;
    margin: 0;
    border-radius: 10px;
    font-size: 12px;
    margin-top: 1rem;
  }

  .project-card {
    width: 90vw;
  }

  .project-title {
    width: 100vw;
    text-align: center;
  }

  .sleft {
    width: 90vw;
    padding: 1rem;
  }

  .sabout {
    display: flex;
    flex-direction: column-reverse;
  }

  .fm {
    margin-bottom: 2rem;
  }
}

